collect_out.txt
============================= test session starts =============================
platform win32 -- Python 3.14.3, pytest-9.0.2, pluggy-1.6.0
django: version: 5.0.14, settings: app.settings (from ini)
rootdir: C:\pfc\kwanzaConnect-project\kwanzaConnect-API
configfile: pytest.ini
plugins: Faker-40.12.0, cov-7.1.0, django-4.12.0, mock-3.15.1
collected 20 items / 7 errors

<Dir kwanzaConnect-API>
  <Package users>
    <Package tests>
      <Package e2e>
        <Module test_auth.py>
          <Function test_user_registration_e2e>
          <Function test_user_login_e2e>
  <Package app>
    <Package tests>
      <Module test_websocket_events.py>
        <Function test_send_message_triggers_websocket>
        <Function test_mark_notifications_read_triggers_websocket>
  <Package chat>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_send_message_success>
          <Function test_send_message_not_member>
  <Package notifications>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_mark_notification_read_success>
          <Function test_mark_all_notifications_read>
  <Package offers>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_create_offer_success>
  <Package rates>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_convert_amount_success>
          <Function test_convert_amount_not_found>
  <Package security>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_verify_api_key_success>
          <Function test_verify_api_key_invalid>
  <Package tests>
    <Module test_cloudinary.py>
      <Function test_cloudinary>
  <Dir tmp>
    <Module test_audit_manual.py>
      <Function test_audit>
  <Package transactions>
    <Package tests>
      <Package unit>
        <Module test_use_cases.py>
          <Function test_confirm_deal_success>
  <Package users>
    <Package tests>
      <Package unit>
        <Module test_password_recovery.py>
          <Function test_forgot_password_success>
          <Function test_reset_password_success>
        <Module test_use_cases.py>
          <Function test_register_user_success>
          <Function test_register_user_already_exists>

=================================== ERRORS ====================================
___________ ERROR collecting audit/tests/unit/test_audit_service.py ___________
venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\HP\AppData\Local\Programs\Python\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1314: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1314: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
<frozen importlib._bootstrap_external>:755: in exec_module
    ???
<frozen importlib._bootstrap_external>:893: in get_code
    ???
<frozen importlib._bootstrap_external>:823: in source_to_code
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
E   SyntaxError: source code string cannot contain null bytes
_______________________ ERROR collecting chat/tests.py ________________________
import file mismatch:
imported module 'chat.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\chat\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\chat\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
___________________ ERROR collecting notifications/tests.py ___________________
import file mismatch:
imported module 'notifications.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\notifications\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\notifications\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
______________________ ERROR collecting offers/tests.py _______________________
import file mismatch:
imported module 'offers.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\offers\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\offers\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
_______________________ ERROR collecting rates/tests.py _______________________
import file mismatch:
imported module 'rates.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\rates\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\rates\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
___________________ ERROR collecting transactions/tests.py ____________________
import file mismatch:
imported module 'transactions.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\transactions\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\transactions\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
_______________________ ERROR collecting users/tests.py _______________________
import file mismatch:
imported module 'users.tests' has this __file__ attribute:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\users\tests
which is not the same as the test file we want to collect:
  C:\pfc\kwanzaConnect-project\kwanzaConnect-API\users\tests.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
=========================== short test summary info ===========================
ERROR audit/tests/unit/test_audit_service.py
ERROR chat/tests.py
ERROR notifications/tests.py
ERROR offers/tests.py
ERROR rates/tests.py
ERROR transactions/tests.py
ERROR users/tests.py
!!!!!!!!!!!!!!!!!!! Interrupted: 7 errors during collection !!!!!!!!!!!!!!!!!!!
==================== 20 tests collected, 7 errors in 1.02s ====================
